@@ -1,3 +1,11 @@
+2007-12-18  Matthieu Nottale  <nottale@gostai.com>
+
+	Define and use ATTRIBUTE_NORETURN.
+	* cli.hh: Use ATTRIBUTE_NORETURN.
+	* compiler.hh: Define ATTRIBUTE_NORETURN.
+	* contract.hh,
+	* sysexits.hh: Use ATTRIBUTE_NORETURN.
+
 2007-12-18  Loic Fosse  <fosse@gostai.com>
 
 	Add file-system containing is_dir.
